# ATSAMC21J15-Can-to-Rectifier-module

./: AUTHORS.md  AtmelStart.env_conf  AtmelStart.gpdsc  README.md  atmel_start_config.atstart  driver_init.c
config/: hpl_can_config.h  peripheral_clk_config.h
gcc/: Makefile
src/: main.c
src/app/: rectifier.c  rectifier.h
src/config/: build_config.h
src/drivers/: can_if.h  can_if_asf4.c  can_if_mcan.c
src/sys/: log.h
tests/host/: CMakeLists.txt  can_if_stub.c  test_rectifier_id.cpp  test_scaling.cpp
tools/python/: ack_inject.py
